@@ -1,5 +1,6 @@
 0.4.13 (in development)
 ------------------------------------------------------------------------
+- Feature: [#22172] [Plugin] Expose ride satisfaction ratings to the plugin API.
 
 0.4.12 (2024-07-07)
 ------------------------------------------------------------------------
